fix: warn user about the WCP project ID in the CI/CD article

--- a/src/docs/5.30.x/wcp/link-a-project.mdx
+++ b/src/docs/5.30.x/wcp/link-a-project.mdx
@@ -99,22 +99,50 @@ If the project owner previously linked the project, the `id` of the project will
 
 ### CI/CD Environment
 
-To link a WCP project inside a CI/CD pipeline you need to use environment variables and a WCP environment `Api key`.
+<Alert type={"info"}>
 
-To retrieve the `API key`, inside your WCP project navigate to `CI/CD Environments` tab and press the `Copy API key` button next to the appropriate environment.
+Before proceeding with the following steps, make sure your Webiny project is linked and that your `webiny.project.ts` configuration file contains the ID of your WCP project.  
+  
+  If you've successfully completed the steps outlined in the [previous section](#personal-development-environment), the ID should already be assigned. If not, the ID of your WCP project should be assigned manually, via the `id` property. For example:
+  
+  
+```diff-ts
+// Import statements removed for brevity.
+
+export default {
+    // A WCP project ID uses the {orgId}/{projectId} structure.
++   id: "webiny-test/webiny-test-project", // 
+    template: "@webiny/cwp-template-aws@5.34.6-beta.1",
+    name: "beta5346-1-es",
+    cli: {
+        // ...
+    },
+    appAliases: {
+        core: "apps/core",
+        api: "apps/api",
+        admin: "apps/admin",
+        website: "apps/website"
+    }
+};
+```
+
+  To retrieve the ID, within the WCP application, simply navigate to your project and copy/paste the ID from the URL.  
+</Alert>
+
+Inside a CI/CD environment, linking a Webiny project with WCP is done via a CI/CD environment's **API key**.
+
+To retrieve the API key, within the WCP application, navigate to your project and click on the **CI/CD Environments** tab. In the CI/CD environments list, click on the **Copy API key** button, next to the appropriate environment.
 
 ![WCP - Link project inside a CI/CD environment - Step 1](./assets/link-a-project/link-cicd-step1.png)
 
-Once you have your `API key`, you need to define a environment variable called `WCP_PROJECT_ENVIRONMENT_API_KEY` inside your CI/CD environment:
+Once copied, the API key needs to be assigned to the `WCP_PROJECT_ENVIRONMENT_API_KEY` environment variable, for example:
 
-```plain
-WCP_PROJECT_ENVIRONMENT_API_KEY = 732e4630-af5d-sample-key-22fc89e2dca9
+```bash
+WCP_PROJECT_ENVIRONMENT_API_KEY=732e4630-af5d-sample-key-22fc89e2dca9
 ```
-
-With this the project inside your CI/CD pipeline will automatically retrieve the correct license when the project gets deployed.
 
 <Alert type="warning" title="Don't share API keys between environments">
 
-Each CI/CD environment must have its own `API key`. Sharing keys between environments will cause WCP to record your monitoring data incorrectly and certain environments might run into API call limits where they shouldn't. Read more about the limits [here](./overview).
+Each CI/CD environment must be using its own environment API key. Sharing keys between different environments will cause WCP to record your monitoring data incorrectly and certain environments might run into API call limits where they shouldn't. Read more about the limits [here](./overview).
 
 </Alert>
