wip: create 5.34.6 release docs

--- a/src/docs/5.28.x/core-development-concepts/basics/webiny-cli.mdx
+++ b/src/docs/5.28.x/core-development-concepts/basics/webiny-cli.mdx
@@ -38,6 +38,10 @@ For more information, please visit the [Use Watch Command](../../core-developmen
 
 </Alert>
 
+`yarn webiny build {folder} --env {dev}`
+
+Builds a project application located inside of the specified folder.
+
 `yarn webiny deploy --env {dev}`
 
 Builds all of the [project applications](../../core-development-concepts/project-organization/project-applications-and-packages) and deploys cloud infrastructure resources defined within them, into the specified environment.
