--- a/src/docs/shared/release-notes/5.34.6/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.6/changelog.mdx
@@ -6,36 +6,46 @@ description: See what's new in Webiny version 5.34.6.
 
 ## Page Builder
 
-### Prerendering Service - Close Browser Page Once At the End of Each Rendering Process ([#3053](https://github.com/webiny/webiny-js/pull/3053))
+### Prerendering Service - More Reliable Rendering of Pages ([#3053](https://github.com/webiny/webiny-js/pull/3053))
 
-TODO
-
-## Form Builder
+With this release, we've made a couple of optimizations within the page prerendering process, making the process more reliable. The increased reliability is mostly felt in cases where multiple pages are being prerendered or even the whole website.
 
 ### Form Page Element - Improve `formId` Existence Check ([#3050](https://github.com/webiny/webiny-js/pull/3050))
 
-TODO
+Within Page Builder's page editor, it a user dropped a form element onto a page but did not immediately select a form to be displayed, the related React component would throw an unhandled error, completely preventing the user from continuing to do any kind of work.
+
+This has now been addressed.
 
 ## Deployment
 
 ### Enable Deploying Projects Into An Existing Amazon VPC (Enterprise) ([#2997](https://github.com/webiny/webiny-js/pull/2997)) ([#3058](https://github.com/webiny/webiny-js/pull/3058))
 
-TODO
+A brand-new enterprise tier feature - the ability to deploy your Webiny project into an existing Amazon Virtual Private Cloud (Amazon VPC).
 
-### Pulumi Stack Output - Automatically Return Custom Domains if Provided ([#3072](https://github.com/webiny/webiny-js/pull/3072))
+For more information on this new feature, check out the related [Use Existing Amazon VPC](#) article.
 
-TODO
+### Improved Developer Experience When Working With Custom Domains  ([#3072](https://github.com/webiny/webiny-js/pull/3072))
+
+Prior to this release, if a Webiny project had custom domains configured, users would need to perform additional steps in order to actually bring them into their Admin and Website applications. If not done properly, one of the issues users might've encountered is the deployed Admin app interacting with the backend GraphQL API over the default Amazon Cloudfront distribution URL, and not the custom domain that was provided. 
+
+So, with this release, we're making the process of assigning custom domains more seamless, by ensuring custom domains are automatically picked up, where necessary. In the example above, once redeployed, the Admin application should immediately be interacting with the backend GraphQL API over the provided custom domain, and not over the default Amazon Cloudfront distribution's one.  
 
 ## Webiny CLI
 
 ### Introduced `webiny build` Command ([#3074](https://github.com/webiny/webiny-js/pull/3074))
 
-TODO
+As the name itself suggests, the new [`webiny build`](/docs/{version}/core-development-concepts/basics/webiny-cli#common-commands) command enables users to simply build their project application. The command can be useful when a project application needs to be just built, and not also deployed, which was previously not possible. 
 
 ### Improved Error Reporting When There's No Internal Workspace Folder ([#3075](https://github.com/webiny/webiny-js/pull/3075))
 
-TODO
+Some Webiny CLI commands, like for example `webiny output` and `webiny pulumi`, require the targeted project application to be previously built.
+
+But, prior to this release, in case a user executed of these commands and the project application wasn't built, they would be presented with a vague and misleading error, preventing them to effectively debug the situation.
+
+So, with this release, we've improved the error message, ensuring that the user immediately understands what's wrong and what are the next steps.
 
 ### Deploy Command - Always Execute Before/After Deploy Hooks  ([#3078](https://github.com/webiny/webiny-js/pull/3078))
 
-TODO
+Prior to this release, executing the [`webiny deploy`](/docs/{version}/core-development-concepts/basics/project-deployment) command with the `--preview` flag would cause the pre-deployment and post-deployment hooks not to be executed. In some cases, this could affect the result of the preview results, making them different from the deployment that would eventually happen.
+
+With this release, mentioned hooks will get triggered, no matter if the command was executed with the `--preview` flag or without it. 
