wip: create 5.34.6 release docs

--- a/src/docs/shared/release-notes/5.34.6/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.6/changelog.mdx
@@ -30,6 +30,26 @@ Prior to this release, if a Webiny project had custom domains configured, users 
 
 So, with this release, we're making the process of assigning custom domains more seamless, by ensuring custom domains are automatically picked up, where necessary. In the example above, once redeployed, the Admin application should immediately be interacting with the backend GraphQL API over the provided custom domain, and not over the default Amazon Cloudfront distribution's one.  
 
+### Resolved Amazon Cognito User Pool-related Issue  ([#3098](https://github.com/webiny/webiny-js/pull/3098))
+
+We've detected an Amazon Cognito user pool-related issue that would happen upon deploying the Core project application. The following is the report that the issue would produce:
+
+```bash
+aws:cognito:UserPool (wby-user-pool):
+    error: 1 error occurred:
+    	* updating urn:pulumi:dev::core::aws:cognito/userPool:UserPool::wby-user-pool: 1 error occurred:
+    	* updating Cognito User pool (eu-central-1_xyz): InvalidParameter: 1 validation error(s) found.
+    - minimum field size of 1, UpdateUserPoolInput.AccountRecoverySetting.RecoveryMechanisms.
+```
+
+To address this, we've added [the necessary defaults](https://github.com/webiny/webiny-js/blob/dev/packages/pulumi-aws/src/apps/core/CoreCognito.ts#L45-L47) to the underlying user pool resource configuration. 
+
+For all users that experienced this issue, deployment should start working correctly once their project has been upgraded. Otherwise, if the error persists, feel free to send us a message in our [community Slack](https://www.webiny.com/slack).
+
+
+
+
+
 ## Webiny CLI
 
 ### Introduced `webiny build` Command ([#3074](https://github.com/webiny/webiny-js/pull/3074))
