wip: create 5.34.6 release docs

--- a/src/docs/shared/release-notes/5.34.6/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.6/changelog.mdx
@@ -22,7 +22,7 @@ This has now been addressed.
 
 A brand-new enterprise tier feature - the ability to deploy your Webiny project into an existing Amazon Virtual Private Cloud (Amazon VPC).
 
-For more information on this new feature, check out the related [Use Existing Amazon VPC](#) article.
+For more information on this new feature, check out the related [Use Existing Amazon VPC](/docs/{exact:5.34.x}/enterprise/use-existing-amazon-vpc) article.
 
 ### Improved Developer Experience When Working With Custom Domains  ([#3072](https://github.com/webiny/webiny-js/pull/3072))
 
