wip: create 5.34.6 release docs

--- a/src/docs/shared/release-notes/5.34.6/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.6/changelog.mdx
@@ -18,7 +18,7 @@ This has now been addressed.
 
 ## Deployment
 
-### Enable Deploying Projects Into An Existing Amazon VPC (Enterprise) ([#2997](https://github.com/webiny/webiny-js/pull/2997)) ([#3058](https://github.com/webiny/webiny-js/pull/3058))
+### Deploying Projects Into An Existing Amazon VPC (Enterprise) ([#2997](https://github.com/webiny/webiny-js/pull/2997)) ([#3058](https://github.com/webiny/webiny-js/pull/3058))
 
 A brand-new enterprise tier feature - the ability to deploy your Webiny project into an existing Amazon Virtual Private Cloud (Amazon VPC).
 
@@ -26,7 +26,7 @@ For more information on this new feature, check out the related [Use Existing Am
 
 ### Improved Developer Experience When Working With Custom Domains  ([#3072](https://github.com/webiny/webiny-js/pull/3072))
 
-Prior to this release, if a Webiny project had custom domains configured, users would need to perform additional steps in order to actually bring them into their Admin and Website applications. If not done properly, one of the issues users might've encountered is the deployed Admin app interacting with the backend GraphQL API over the default Amazon Cloudfront distribution URL, and not the custom domain that was provided. 
+Prior to this release, if a Webiny project had custom domains configured, users would need to perform additional steps in order to actually bring them into their Admin and Website applications. If not done properly, one of the issues users might've encountered is the deployed Admin application interacting with the backend GraphQL API over the default Amazon Cloudfront distribution URL, and not the custom domain that was provided. 
 
 So, with this release, we're making the process of assigning custom domains more seamless, by ensuring custom domains are automatically picked up, where necessary. In the example above, once redeployed, the Admin application should immediately be interacting with the backend GraphQL API over the provided custom domain, and not over the default Amazon Cloudfront distribution's one.  
 
@@ -45,10 +45,6 @@ aws:cognito:UserPool (wby-user-pool):
 To address this, we've added [the necessary defaults](https://github.com/webiny/webiny-js/blob/dev/packages/pulumi-aws/src/apps/core/CoreCognito.ts#L45-L47) to the underlying user pool resource configuration. 
 
 For all users that experienced this issue, deployment should start working correctly once their project has been upgraded. Otherwise, if the error persists, feel free to send us a message in our [community Slack](https://www.webiny.com/slack).
-
-
-
-
 
 ## Webiny CLI
 
