--- a/src/docs/5.34.x/overview/features/security.mdx
+++ b/src/docs/5.34.x/overview/features/security.mdx
@@ -49,25 +49,31 @@ The serverless services Webiny uses as part of its architecture are fault-tolera
 
 With Webiny there are zero servers you need to manage, reducing the risk of a security breach due to misconfiguration. Serverless services are tested by the cloud provider against all forms of attacks across millions of customers, giving your confidence in their security. Serverless services in general reduce the potential attack vectors that can be used against your application.
 
-Webiny ships with 2 infrastructure stacks by default, a development one and a production one.
+Webiny ships with two deployment modes by default, a development one and a production one.
 
-<Alert type="warning" title="Use the right stack">
+<Alert type="warning" title="Use the right deployment mode">
 
-We highly recommend that you use the `production` stack for all your projects running production traffic. [Learn more about the stacks.](../../architecture/deployment-modes/introduction)
+We highly recommend that you use the production deployment mode for all your projects running production traffic. [Learn more about the deployment modes.](../../architecture/deployment-modes/introduction)
 
 </Alert>
 
 The production stack by default is deployed inside a private VPC preventing direct access to resources like DynamoDB and the Elasticsearch database. Keeping your data safe.
 
-### VPC & VPC Endpoints
+### Deploying Into Amazon Virtual Private Cloud (Amazon VPC)
 
-Webiny in its Enterprise tier, offers an additional infrastructure configuration, one that further hardens the security posture and keeps the communication between specific services within the private network without exposing any of its data or communication to the public internet.
+In its Enterprise tier, Webiny offers an additional infrastructure configuration, one that further hardens the security posture and keeps the communication between specific services within the private network without exposing any of its data or communication to the public internet. 
 
-Webiny Enterprise customers can deploy Webiny within their existing VPC that they already manage using their existing toolset.
+Webiny Enterprise customers can deploy a Webiny project into their existing Amazon VPC that they already manage using their existing toolset. 
 
-In addition to deploying Webiny inside a VPC, VPC endpoints can be used with services like DynamoDB (gateway endpoint), S3 (gateway endpoint), SQS (interface endpoint) and EventBridge (interface endpoint).
+In addition to deploying Webiny inside an Amazon VPC, Amazon VPC endpoints can be used with services like Amazon DynamoDB, Amazon S3, Amazon SQS and Amazon EventBridge. 
 
-As many organizations already have a securely configured VPC and VPC endpoints, Webiny can be configured to utilize those existing resources. If the preference is to deploy Webiny into an isolated AWS account, but still utilize the VPC and VPC endpoints, that configuration is also available.
+As many organizations already have a securely configured Amazon VPC and Amazon VPC endpoints, a Webiny project can be configured to utilize those existing resources. If the preference is to deploy Webiny into an isolated AWS account, but still utilize the VPC and VPC endpoints, that configuration is also available. 
+
+<Alert type={"info"}>
+
+  To learn more about deploying your Webiny project into an existing Amazon VPC, check out the [Use Existing Amazon VPC](/docs/{version}/enterprise/use-existing-amazon-vpc) article.
+
+</Alert>
 
 Additional security improvements you can make to your project:
 
