--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/content-entry-revisions.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/content-entry-revisions.mdx
@@ -1,48 +1,48 @@
 ---
 title: Content Entry Revisions
-description: Learn how to publish a content entry's previous revision, and create a new entry version from a revision in Headless CMS.
+description: Learn how to publish a content entry's previous revision, and create a new content entry version from a previous revision in Headless CMS.
 ---
 
 import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- how to publish a content entry's previous revision
-- how to create a new entry version from a revision
+- how to create multiple revisions of a content entry and publish a specific revision
+- how to create a new content entry version from a previous revision
 
 </Alert>
 
-Webiny stores every saved/published change in a content entry as a separate revision.  
-In this tutorial, we will learn how to publish a previous revision of a content entry.
-We will also learn how to create a new entry version from a revision.
+In Webiny, each modification in a content entry that is saved or published is stored as an individual revision.
+In this tutorial, we will learn how to create multiple revisions of a content entry and publish a specific revision.
+We will also learn how to create a new content entry version from a previous revision.
 As an example, we will use the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial:
 
 We will do this in 3 steps:
-- Step 1: Create a content entry in the **Product** content model and make some revisions of it.
-- Step 2: Publish a previous revision.
-- Step 3: Create a new entry version from a revision.
+- Step 1: Create a content entry in the **Product** content model and make multiple revisions.
+- Step 2: Publish a previous revision of the content entry.
+- Step 3: Create a new content entry version from a previous revision.
 
-## Step 1: Create a Content Entry and its Revisions
+## Step 1: Create a Content Entry and Its Revisions
 
 If you are not familiar with how to create a content entry, please follow the [Create Content Entry](../essentials/create-content-entry) tutorial.
 
 1. Create a content entry in the **Product** content model with the following attributes:
 
-    | Field       | Value                                                                                           |
-    | :-------    | :----------                                                                                     |
-    | Name        | **Solid Round Neck Blue T-Shirt**                                                               |
-    | Description | **Type: Round Neck / Sleeve: Half Sleeve / Fit: Regular / Color: Blue / Fabric: Cotton Blend**  |
-    | Price       | **15**                                                                                          |
-    | Category    | **Clothes**                                                                                     |
+    | Field       | Value                                                              |
+    | :-------    | :----------                                                        |
+    | Name        | **Men's Blue T-Shirt**                                             |
+    | Description | **Half Sleeved, Regular fit, Cotton blend, Blue T-shirt for Men**  |
+    | Price       | **15**                                                             |
+    | Category    | **Clothes**                                                        |
 
     **Note**: If you haven't added the **Category** field to the **Product** content model, skip it (or add it by following the [Reference Field](../essentials/reference-field) tutorial).
 
 2. Now, update the **Name** and **Description** textboxes with the following values:
 
-    | Field       | Value                                                                                                           |
-    | :-------    | :----------                                                                                                     |
-    | Name        | **Men's Solid Round Neck Blue T-Shirt**                                                                         |
-    | Description | **Type: Round Neck / Sleeve: Half Sleeve / Fit: Regular / Color: Blue / Fabric: Cotton Blend / Ideal For: Men** |
+    | Field       | Value                                                                    |
+    | :-------    | :----------                                                              |
+    | Name        | **Men's Solid Blue T-Shirt**                                             |
+    | Description | **Half Sleeved, Regular fit, Cotton blend, Solid, Blue T-shirt for Men** |
 
 3. Click **SAVE & PUBLISH**.
 
@@ -51,39 +51,40 @@ If you are not familiar with how to create a content entry, please follow the [C
 
 4. Create another revision by updating the **Name** and **Description** textboxes with the following values:
 
-    | Field       | Value                                                                                                             |
-    | :-------    | :----------                                                                                                       |
-    | Name        | **Women's Solid Round Neck Blue T-Shirt**                                                                         |
-    | Description | **Type: Round Neck / Sleeve: Half Sleeve / Fit: Regular / Color: Blue / Fabric: Cotton Blend / Ideal For: Women** |
+    | Field       | Value                                                                                |
+    | :-------    | :----------                                                                          |
+    | Name        | **Men's Solid Round Neck Blue T-Shirt**                                              |
+    | Description | **Round Neck, Half Sleeved, Regular fit, Cotton blend, Solid, Blue T-shirt for Men** |
 
 5. Click **SAVE & PUBLISH**.
 
+
 ## Step 2: Publish a Previous Revision
 
-1. In the **Women's Solid Round Neck Blue T-Shirt** content entry, click the **REVISIONS** tab.
+1. In the **Men's Solid Round Neck Blue T-Shirt** content entry, click the **REVISIONS** tab.
 
-2. To publish the previous **Men's Solid Round Neck Blue T-Shirt** revision, click the **Kebab Menu** on it ( ⁝ ).
+2. To publish the previous **Men's Solid Blue T-Shirt** revision, click the **Kebab Menu** on it ( ⁝ ).
 
     ✔️ Menu opens.
 
 3. Click **Publish**.
 
-    ✔️ The **Men’s Solid Round Neck Blue T-Shirt** revision gets published. **CONTENT** tab opens with the message "Successfully published revision #2!".
+    ✔️ The **Men's Solid Blue T-Shirt** revision gets published. **CONTENT** tab opens with the message "Successfully published revision #2!".
 
     **Note**: The dropdown on the top-left corner of the content tab shows **V3 (UNPUBLISHED)**. To open the published entry version, click **V2 (Published)** in the dropdown.
 
 
-## Step 3: Create a new entry version from a revision
+## Step 3: Create a new content entry version from a previous revision
 
-1. In the **Women's Solid Round Neck Blue T-Shirt** content entry, click the **REVISIONS** tab.
+1. In the **Men's Solid Round Neck Blue T-Shirt** content entry, click the **REVISIONS** tab.
 
-2. To create a new entry version from the previous **Solid Round Neck Blue T-Shirt** revision, click the **Kebab Menu** on it ( ⁝ ).
+2. To create a new entry version from the previous **Men's Blue T-Shirt** revision, click the **Kebab Menu** on it ( ⁝ ).
 
     ✔️ Menu opens.
 
 3. Click **New from current**.
 
-    ✔️ **CONTENT** tab opens with a new draft of the previous **Solid Round Neck Blue T-Shirt** revision.
+    ✔️ **CONTENT** tab opens with a new draft of the previous **Men's Blue T-Shirt** revision.
 
     **Optional**: Make the desired change(s) in the respective field(s).
 
