--- a/src/docs/5.28.x/user-guides/headless-cms/advanced/content-localization.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/advanced/content-localization.mdx
@@ -11,10 +11,10 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
-Webiny offers content localization that allows you to adapt your content to different languages and locations by creating multiple locales.
-The CMS provides you the flexibility to define different content schemas for different locales. That means for each locale, you can create separate content model groups, content models, content entries, etc.
+Webiny offers content localization that allows you to adapt your content to different languages by creating multiple locales.
+It provides you the flexibility to define different content schemas for different locales. That means for each locale, you can create separate content model groups, content models, content entries, etc.
 
-**Note**: On creating a new locale, you get a clean instance of the CMS for that locale. You need to add content schema and content to each locale separately. You will not find any previously created content in a new locale.
+When you create a new locale, you get a clean slate in which you can create new content models and content entries. This gives you the flexibility to define variations of content models depending on your locales.
 
 In this tutorial, we will learn how to create a content model for multiple locales.
 We will do this in 4 steps:
@@ -27,7 +27,7 @@ We will do this in 4 steps:
 ## Prerequisites
 
 To follow this tutorial, you need the **Product** content model to clone it.
-If you don't have the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial, please create it.
+If you don't have the **Product** content model, please follow the [Create Content Model](../essentials/create-content-model) tutorial to create it.
 
 
 ## Step 1: Create and Select a New Locale
@@ -48,7 +48,7 @@ We will create a new locale for the **Italic** language.
 ## Step 2: Create a Content Model Group in the New Locale
 If you are not familiar with how to create a content model group or a content model, please follow the [Create Content Model Group](../essentials/create-content-model-group) tutorial.
 
-1. Create a content model group with the following attributes:
+1. Create a content model group with the following attributes in the **it-IT** locale:
 
     | Attribute   | Value                               |
     | :-------    | :----------------------             |
@@ -59,15 +59,13 @@ If you are not familiar with how to create a content model group or a content mo
 
 ## Step 3: Clone a Content Model into the New Locale
 
-In this step, we will clone the **Product** content model from the **en-US** locale into the **it-IT** locale. We will update the clone content model's attributes with the following values:
+There are a couple of ways to create a content model in a locale. You can either [create a content model](../essentials/create-content-model) from scratch, or you can clone it from another locale. In this step, we will clone the **Product** content model from the **en-US** locale into the **it-IT** locale. We will update the clone content model's attributes with the following values:
 
 | Attribute   | Values                                    |
 | :-------    | :----------                               |
 | Name        | **Prodotto**                              |
 | Group       | **Commercio Elettronico**                 |
 | Description | **Modello di contenuto del prodotto demo**|
-
-**Note**: You can also [create a content model](../essentials/create-content-model) from scratch in the **it-IT** locale if you want.
 
 1. In the ** LOCALE** dropdown, click **en-UN**.
 
@@ -90,7 +88,7 @@ In this step, we will clone the **Product** content model from the **en-US** loc
 
 9. Click **+ CLONE**.
 
-10. Update the lables of the fields of the **Prodotto** content model with the following values:
+10. Update the labels of the fields of the **Prodotto** content model with the following values:
 
     | Old Label    | New Label        |
     | :------------| :----------------|
@@ -101,8 +99,6 @@ In this step, we will clone the **Product** content model from the **en-US** loc
 
 ## Step 4: Create a Content Entry in the New Locale
 
-If you are not familiar with how to create a content entry, please follow the [Create Content Entry](../essentials/create-content-entry) tutorial.
-
 1. Add a content entry in the **Prodotto** content model with the following attributes:
 
     | Attribute   | Values                                      |
@@ -110,3 +106,5 @@ If you are not familiar with how to create a content entry, please follow the [C
     | Nome        | **Allegra K Abito Shift Abito Shift Donna** |
     | Descrizione | **Girocollo increspato, manica del braccialetto, polsini elastici, chiusura a bottone posteriore, foro della serratura posteriore, completamente foderato, mini abito**                                                     |
     | Prezzo      | **55**                                      |
+
+    **Note**: If you are not familiar with how to create a content entry, please follow the [Create Content Entry](../essentials/create-content-entry) tutorial.
