Made changes after review

--- a/src/docs/5.28.x/user-guides/headless-cms/advanced/user-creation.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/advanced/user-creation.mdx
@@ -1,6 +1,6 @@
 ---
 title: User Creation
-description: Learn how to create a user with limited access in Headless CMS.
+description: Learn how to create a user with custom access to Headless CMS.
 ---
 
 import { Alert } from "@/components/Alert";
@@ -8,33 +8,33 @@ import { Alert } from "@/components/Alert";
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
 - how to create a user group
-- how to define access constraints for a user group
+- how to define access permissions for a user group
 - how to create a user
 
 </Alert>
 
-Webiny allows you to add multiple users with different roles to your instance. You can define a custom user role with constrained access by creating a user group. 
-In this tutorial, we will learn how to create a user group with limited access to the CMS. Then we will create a user within that user group.
+Webiny allows you to add multiple users with different access permissions to your instance. You can define a custom user role with custom access by creating a user group. 
+In this tutorial, we will learn how to create a user group with custom access to the CMS. Then we will create a user within that user group.
 
-As an example, we will create a user group with the following access constraints:
+As an example, we will create a user group with the following access permissions:
 
-- Access to view and update a specific content model group.
-- Access to view, create, and update all content models inside the content model group.
-- Access to view, create, and update the content entries inside the content models.
+- Permission to view and update a specific content model group.
+- Permission to view, create, and update all content models inside the respective content model group.
+- Permission to view, create, and update the content entries inside the content models.
 
 
 We will do this in 3 steps:
 - Step 1: Create a user group.  
-- Step 2: Define access constraints.
+- Step 2: Define access permissions.
 - Step 3: Create user within the user group.
 
 
-## Step 1: Create User Group
+## Step 1: Create a User Group
 1. From the **Side Menu**, Click **Settings** > **Groups**. 
 
 2. Click **+ NEW GROUP**.
    
-   ✔️ The **Untitled** screen opens.
+   ✔️ The form to create a new user group opens.
 
 3. In the **Name** textbox, type **E-Commerce**.
 
@@ -43,7 +43,7 @@ We will do this in 3 steps:
 5. In the **Description** textbox, type **User group for E-Commerce project managers**.
 
 
-## Step 2: Define Access Constraints
+## Step 2: Define Access Permissions
 
 1. Under the **Permissions** section, in the **Content** accordion, click **All locales**.
 
@@ -79,7 +79,9 @@ We will do this in 3 steps:
 
 8. Under **PUBLISHING ACTIONS**, check both - **Publish** and **Unpublish** checkboxes.
 
-9. Click **SAVE GROUP**
+9. Click **SAVE GROUP**.
+
+    ✔️ The message "Group saved successfully!" displays.
 
 
 ## Step 3: Create User
@@ -101,3 +103,5 @@ We will do this in 3 steps:
 7. In the **Group** dropdown, click **E-Commerce**.
 
 8. Click **SAVE USER**.
+
+    ✔️ The message "User saved successfully." displays.
