Made changes after review

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/clone-content-model.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/clone-content-model.mdx
@@ -11,20 +11,20 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
-Webiny allows you to create a new content model by making a clone of an existing content model. The clone has the same fields, validations, and other settings as the original content model.
+Webiny allows you to create a new content model by cloning an existing content model. All the fields, validations, and other settings are copied over from the original content model to the clone content model.
 
 In this tutorial, we will learn how to clone a content model. As an example, we will create a content model with the following attributes by cloning an existing content model:
 
-| Attribute   | Value                  |
-| :-------    | :----------------------|
-| Name        | E-Commerce             |
-| Group icon  | 🛒                     |
-| Description | E-Commerce Model Group |
+| Attribute   | Value                                                         |
+| :-------    | :----------------------                                       |
+| Name        | **Virtual Product**                                           |
+| Group       | **E-Commerce**                                                |
+| Description | **Demo Virtual Product Content Model for E-Commerce project** |
 
 ## Prerequisites
 
 To follow this tutorial, you need the **Product** content model to clone it.
-If you don't have the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial, please create it.
+If you don't have the **Product**, please follow the [Create Content Model](../essentials/create-content-model) tutorial to create it.
 
 ## Clone Content Model
 
@@ -47,3 +47,4 @@ If you don't have the **Product** content model that we created in the [Create C
     ( *Description textbox is uneditable in the CMS.* )
 
 8. Click **+ CLONE**.
+    ✔️ **Virtual Product** content model is created.
