docs: done improvements to content entry revision guide

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/content-entry-revisions.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/content-entry-revisions.mdx
@@ -1,18 +1,18 @@
 ---
 title: Content Entry Revisions
-description: Learn how to publish a content entry's previous revision, and create a new content entry version from a previous revision in Headless CMS.
+description: Learn how to publish a specific version of a content entry, and create a new version of a content entry by deriving from a previous revision.
 ---
 
 import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- how to create multiple revisions of a content entry and publish a specific revision
+- how to create multiple revisions of a content entry and publish a specific one
 - how to create a new content entry version from a previous revision
 
 </Alert>
 
-In Webiny, each modification in a content entry that is saved or published is stored as an individual revision.
+In Webiny, each modification in a content entry that is saved or published is stored as a separate revision.
 In this tutorial, we will learn how to create multiple revisions of a content entry and publish a specific revision.
 We will also learn how to create a new content entry version from a previous revision.
 As an example, we will use the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial:
@@ -65,7 +65,7 @@ If you are not familiar with how to create a content entry, please follow the [C
 
 2. To publish the previous **Men's Solid Blue T-Shirt** revision, click the **Kebab Menu** on it ( ⁝ ).
 
-    ✔️ Menu opens.
+    ✔️ Menu opens with **New from current** and **Publish** option.
 
 3. Click **Publish**.
 
@@ -80,7 +80,7 @@ If you are not familiar with how to create a content entry, please follow the [C
 
 2. To create a new entry version from the previous **Men's Blue T-Shirt** revision, click the **Kebab Menu** on it ( ⁝ ).
 
-    ✔️ Menu opens.
+    ✔️ Menu opens with **New from current** and **Publish** option.
 
 3. Click **New from current**.
 
@@ -89,3 +89,4 @@ If you are not familiar with how to create a content entry, please follow the [C
     **Optional**: Make the desired change(s) in the respective field(s).
 
 4. Click **SAVE & PUBLISH**.
+   ✔️ A new content entry revision will be saved and published.
