--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/clone-content-model.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/clone-content-model.mdx
@@ -24,7 +24,7 @@ In this tutorial, we will learn how to clone a content model. As an example, we 
 ## Prerequisites
 
 To follow this tutorial, you need the **Product** content model to clone it.
-If you don't have the **Product**, please follow the [Create Content Model](../essentials/create-content-model) tutorial to create it.
+If you don't have the **Product** content model, please follow the [Create Content Model](../essentials/create-content-model) tutorial to create it.
 
 ## Clone Content Model
 
@@ -32,7 +32,7 @@ If you don't have the **Product**, please follow the [Create Content Model](../e
 
 2. Hover on the **Product** content model.
 
-3. Click the **CLONE CONTENT MODEL** icon ( *clone icon required* ).
+3. Click the **CLONE CONTENT MODEL** icon.
 
     ✔️ The **Clone Content Model** screen opens.
 
@@ -40,11 +40,9 @@ If you don't have the **Product**, please follow the [Create Content Model](../e
 
 5. In the **Content model locale** dropdown, click **Current locale**.
 
-6. In the **Content model group** dropdown, click **E-Commerce**.
+6. In the **Content model group** drop-down, if you have the **E-Commerce** group, select that group; else select **Ungrouped**.
 
 7. In the **Description** textbox, update the text to **Demo Virtual Product Content Model for E-Commerce project**.
-    
-    ( *Description textbox is uneditable in the CMS.* )
 
-8. Click **+ CLONE**.
+8. Click **+ CLONE**.  
     ✔️ **Virtual Product** content model is created.
