docs: done improvements to content localization guide

--- a/src/docs/5.28.x/user-guides/headless-cms/advanced/content-localization.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/advanced/content-localization.mdx
@@ -12,9 +12,9 @@ import { Alert } from "@/components/Alert";
 </Alert>
 
 Webiny offers content localization that allows you to adapt your content to different languages by creating multiple locales.
-It provides you the flexibility to define different content schemas for different locales. That means for each locale, you can create separate content model groups, content models, content entries, etc.
+It provides the flexibility to define distinct content schemas for various locales. This means that for each locale, you can create separate content model groups, content models, content entries, etc.
 
-When you create a new locale, you get a clean slate in which you can create new content models and content entries. This gives you the flexibility to define variations of content models depending on your locales.
+When you create a new locale, you get a clean slate in which you can create new content models, group, and entries. This gives you the flexibility to define variations of content models depending on your locales.
 
 In this tutorial, we will learn how to create a content model for multiple locales.
 We will do this in 4 steps:
@@ -34,7 +34,7 @@ If you don't have the **Product** content model, please follow the [Create Conte
 
 We will create a new locale for the **Italic** language.
 
-1. From the **Side Menu**, Click **Settings** > **Locales**.
+1. From the **Side Menu**, Click **Settings** > **LANGUAGES** > **Locales**.
 2. Click **+ NEW LOCALE**.
 
    ✔️ The **New locale** section opens.
@@ -42,11 +42,11 @@ We will create a new locale for the **Italic** language.
 3. In the **Code** dropdown, type **it**.
 4. In the available options in the dropdown, click **it-IT**.
 5. Click **SAVE LOCALE**.
-6. In the ** LOCALE** dropdown, click **it-IT**.
+6. Click on the **LOCALE** dropdown in the header section and select **it-IT** to switch to the Italian locale.
 
 
 ## Step 2: Create a Content Model Group in the New Locale
-If you are not familiar with how to create a content model group or a content model, please follow the [Create Content Model Group](../essentials/create-content-model-group) tutorial.
+If you are not familiar with how to create a content model group, please follow the [Create Content Model Group](../essentials/create-content-model-group) tutorial.
 
 1. Create a content model group with the following attributes in the **it-IT** locale:
 
@@ -67,13 +67,13 @@ There are a couple of ways to create a content model in a locale. You can either
 | Group       | **Commercio Elettronico**                 |
 | Description | **Modello di contenuto del prodotto demo**|
 
-1. In the ** LOCALE** dropdown, click **en-UN**.
+1. Click on the **LOCALE** dropdown in the header section and select **en-US**.
 
 2. From the **Side Menu**, Click **Headless CMS** > **Models**.
 
 3. Hover on the **Product** content model.
 
-4. Click the **CLONE CONTENT MODEL** icon ( *clone icon required* ).
+4. Click the **CLONE CONTENT MODEL** icon.
 
     ✔️ The **Clone Content Model** screen opens.
 
@@ -84,7 +84,6 @@ There are a couple of ways to create a content model in a locale. You can either
 7. In the **Content model group** dropdown, click **Commercio Elettronico**.
 
 8. In the **Description** textbox, update the text to **Modello di contenuto del prodotto demo**.
-    *Description textbox is uneditable in the CMS.*
 
 9. Click **+ CLONE**.
 
