docs: done improvements to content localization guide

--- a/src/docs/5.28.x/user-guides/headless-cms/advanced/content-localization.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/advanced/content-localization.mdx
@@ -98,6 +98,8 @@ There are a couple of ways to create a content model in a locale. You can either
 
 ## Step 4: Create a Content Entry in the New Locale
 
+If you are not familiar with how to create a content entry, please follow the [Create Content Entry](../essentials/create-content-entry) tutorial.
+
 1. Add a content entry in the **Prodotto** content model with the following attributes:
 
     | Attribute   | Values                                      |
@@ -105,5 +107,3 @@ There are a couple of ways to create a content model in a locale. You can either
     | Nome        | **Allegra K Abito Shift Abito Shift Donna** |
     | Descrizione | **Girocollo increspato, manica del braccialetto, polsini elastici, chiusura a bottone posteriore, foro della serratura posteriore, completamente foderato, mini abito**                                                     |
     | Prezzo      | **55**                                      |
-
-    **Note**: If you are not familiar with how to create a content entry, please follow the [Create Content Entry](../essentials/create-content-entry) tutorial.
