docs: done improvements to user creation guide

--- a/src/docs/5.28.x/user-guides/headless-cms/advanced/user-creation.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/advanced/user-creation.mdx
@@ -13,8 +13,8 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
-Webiny allows you to add multiple users with different access permissions to your instance. You can define a custom user role with custom access by creating a user group. 
-In this tutorial, we will learn how to create a user group with custom access to the CMS. Then we will create a user within that user group.
+Webiny allows you to add multiple users with different access permissions to your application. You can define the access permissions by creating a user group.
+In this tutorial, we will learn how to create a user group with custom access permission to the Headless CMS. Then we will create a user within that user group.
 
 As an example, we will create a user group with the following access permissions:
 
@@ -30,7 +30,7 @@ We will do this in 3 steps:
 
 
 ## Step 1: Create a User Group
-1. From the **Side Menu**, Click **Settings** > **Groups**. 
+1. From the **Side Menu**, Click **Settings** > **ACCESS MANAGEMENT** > **Groups**.
 
 2. Click **+ NEW GROUP**.
    
@@ -40,7 +40,7 @@ We will do this in 3 steps:
 
 4. In the **Slug** textbox, type **e-commerce**.
 
-5. In the **Description** textbox, type **User group for E-Commerce project managers**.
+5. In the **Description** textbox, type **User group for E-Commerce Managers**.
 
 
 ## Step 2: Define Access Permissions
@@ -53,7 +53,7 @@ We will do this in 3 steps:
 
 3. In the **Access Level** dropdown, click **Custom access**.
 
-4. Under **GRAPHQL API TYPES**, select all the three - **Read**, **Manage**, and **Preview** checkboxes.
+4. Under **GRAPHQL API TYPES**, select all the three checkboxes (**Read**, **Manage**, and **Preview**).
 
 5. Under the **CONTENT MODEL GROUPS** section:
 
@@ -86,17 +86,17 @@ We will do this in 3 steps:
 
 ## Step 3: Create User
 
-1. From the **Side Menu**, Click **Settings** > **Users**
+1. From the **Side Menu**, Click **Settings** > **ADMIN USERS** > **Users**
 
 2. Click **+ NEW USER**.
 
     ✔️ The **New User** screen opens.
 
-3. In the **First Name** textbox, type *new user's first name* ( Ex: John ).
+3. In the **First Name** textbox, type *new user's first name* (e.g. John).
 
-4. In the **Last Name** textbox, type *new user's last name* ( Ex: Doe ).
+4. In the **Last Name** textbox, type *new user's last name* (e.g. Doe).
 
-5. In the **Email** textbox, type *new user's email* ( Ex: johndoe@example.com ).
+5. In the **Email** textbox, type *new user's email* (e.g. johndoe@example.com).
 
 6. In the **Password** textbox, type *new user's password*.
 
