fix: add a quick FAQ item

--- a/src/docs/5.29.x/infrastructure/additional-resources/connect-custom-domain.mdx
+++ b/src/docs/5.29.x/infrastructure/additional-resources/connect-custom-domain.mdx
@@ -90,3 +90,9 @@ You can use a service like [DNS Checker](https://dnschecker.org/) to check the s
 Finally, test the alternate domain name by visiting URLs with your domain name instead of the CloudFront domain name of your distribution:
 
 ![Website with custom domain](./assets/connect-custom-domain/cool-website.png)
+
+## FAQ
+
+**Do we need to apply the domain changes to multiple applications or just the Admin app? **
+
+On order to have all three applications, **API** (`apps/api`), **Admin** (`apps/admin`), and **Website** (`apps/website`), publicly accessible over a custom domain, domain changes need to be applied for all three applications. This is done via their respective `webiny.application.ts` configuration files.
