update letters for the graphs

--- a/src/docs/5.35.x/architecture/api/overview.mdx
+++ b/src/docs/5.35.x/architecture/api/overview.mdx
@@ -52,23 +52,23 @@ In the following text, we briefly cover how each of the different Webiny applica
 
 ### 1. Security
 
-Although the Security application does work with multiple identity providers, by default, it works with Amazon Cognito, hence its icon in the lower section of the diagram <diagram-letter>e</diagram-letter>. The identity checks are performed from the GraphQL Handler <diagram-letter>C</diagram-letter> AWS Lambda function.
+Although the Security application does work with multiple identity providers, by default, it works with Amazon Cognito, hence its icon in the lower section of the diagram <diagram-letter>d</diagram-letter>. The identity checks are performed from the GraphQL Handler <diagram-letter>C</diagram-letter> AWS Lambda function.
 
-With Amazon Cognito, the application also extends the GraphQL schema located on the GraphQL Handler <diagram-letter>C</diagram-letter> AWS Lambda function.
+With Amazon Cognito, the application also extends the GraphQL schema located on the GraphQL Handler <diagram-letter>C</diagram-letter>.
 
-For storing data, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter>.
+For storing data, the application relies on Amazon DynamoDB <diagram-letter>E</diagram-letter>.
 
 ### 2. I18N
 
 The I18N application doesn't bring any additional cloud infrastructure resources. It just expands the GraphQL schema with its own types and resolvers, so we can say only the GraphQL Handler AWS Lambda function <diagram-letter>C</diagram-letter> gets affected by it.
 
-For storing data, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter>.
+For storing data, the application relies on Amazon DynamoDB <diagram-letter>E</diagram-letter>.
 
 ### 3. File Manager
 
-Besides extending the GraphQL schema located on the GraphQL Handler AWS Lambda function <diagram-letter>c</diagram-letter>, the File Manager application also introduces a couple of dedicated AWS Lambda functions. These perform various file-related tasks like uploading, downloading, and also image optimizations. It also introduces a single Amazon S3 bucket <diagram-letter>H</diagram-letter>, in which the files are ultimately stored.
+Besides extending the GraphQL schema located on the GraphQL Handler AWS Lambda function <diagram-letter>c</diagram-letter>, the File Manager application also introduces a couple of dedicated AWS Lambda functions. These perform various file-related tasks like uploading, downloading, and also image optimizations. It also introduces a single Amazon S3 bucket <diagram-letter>G</diagram-letter>, in which the files are ultimately stored.
 
-For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
+For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>E</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>F</diagram-letter>, respectively.
 
 ### 4. Page Builder (with Prerendering Service)
 
@@ -76,18 +76,18 @@ Besides extending the GraphQL schema, the Page Builder application also introduc
 
 Also, via an Amazon EventBridge (part of the **Core** project application, now shown on the diagram), it interacts with the prerendering service that's deployed as part of the **Website** project application (more on this in the [Website](./../website/overview) section.
 
-For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
+For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>E</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>F</diagram-letter>, respectively.
 
 ### 5. Form Builder
 
 The Form Builder application doesn't bring any additional cloud infrastructure resources. It just extends the GraphQL schema with its own types and resolvers, so we can say only the GraphQL Handler AWS Lambda function <diagram-letter>C</diagram-letter> gets affected by it.
 
-For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
+For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>E</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>F</diagram-letter>, respectively.
 
 ### 6. Headless CMS
 
 
-For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
+For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>E</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>F</diagram-letter>, respectively.
 
 <Alert type="info">
 
