docs: added content localization, user creation and content entry revision videos

--- a/src/docs/5.28.x/user-guides/headless-cms/advanced/content-localization.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/advanced/content-localization.mdx
@@ -4,6 +4,7 @@ description: Learn how to create a content model for multiple locales.
 ---
 
 import { Alert } from "@/components/Alert";
+import contentLocalization from "./assets/content-localization/content-localization.mp4";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -15,6 +16,8 @@ Webiny offers content localization that allows you to adapt your content to diff
 It provides the flexibility to define distinct content schemas for various locales. This means that for each locale, you can create separate content model groups, content models, content entries, etc.
 
 When you create a new locale, you get a clean slate in which you can create new content models, group, and entries. This gives you the flexibility to define variations of content models depending on your locales.
+
+<Video src={contentLocalization} controls={true}/>
 
 In this tutorial, we will learn how to create a content model for multiple locales.
 We will do this in 4 steps:
