--- a/src/docs/5.28.x/user-guides/headless-cms/advanced/user-creation.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/advanced/user-creation.mdx
@@ -4,6 +4,7 @@ description: Learn how to create a user with custom access to Headless CMS.
 ---
 
 import { Alert } from "@/components/Alert";
+import userCreation from "./assets/user-creation/user-creation.mp4";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -22,6 +23,7 @@ As an example, we will create a user group with the following access permissions
 - Permission to view, create, and update all content models inside the respective content model group.
 - Permission to view, create, and update the content entries inside the content models.
 
+<Video src={userCreation} controls={true}/>
 
 We will do this in 3 steps:
 - Step 1: Create a user group.  
