--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/content-entry-revisions.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/content-entry-revisions.mdx
@@ -4,6 +4,7 @@ description: Learn how to publish a specific version of a content entry, and cre
 ---
 
 import { Alert } from "@/components/Alert";
+import contentEntryRevision from "./assets/content-entry-revisions/content-entry-revisions.mp4";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -15,7 +16,9 @@ import { Alert } from "@/components/Alert";
 In Webiny, each modification in a content entry that is saved or published is stored as a separate revision.
 In this tutorial, we will learn how to create multiple revisions of a content entry and publish a specific revision.
 We will also learn how to create a new content entry version from a previous revision.
-As an example, we will use the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial:
+As an example, we will use the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial.
+
+<Video src={contentEntryRevision} controls={true}/>
 
 We will do this in 3 steps:
 - Step 1: Create a content entry in the **Product** content model and make multiple revisions.
