docs: added clone content model video

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/clone-content-model.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/clone-content-model.mdx
@@ -4,6 +4,7 @@ description: Learn how to clone a content model in Headless CMS.
 ---
 
 import { Alert } from "@/components/Alert";
+import cloneContentModel from "./assets/clone-content-model/clone-content-model.mp4";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -20,6 +21,8 @@ In this tutorial, we will learn how to clone a content model. As an example, we 
 | Name        | **Virtual Product**                                           |
 | Group       | **E-Commerce**                                                |
 | Description | **Demo Virtual Product Content Model for E-Commerce project** |
+
+<Video src={cloneContentModel} controls={true}/>
 
 ## Prerequisites
 
