docs: done following Rearranged user guide navigation menu Removed sample-advance-page Update content model is basically 'manage content model settings', done the respective changes for it

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/manage-content-model-settings.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/manage-content-model-settings.mdx
@@ -1,6 +1,6 @@
 ---
-title: Update Content Model
-description: Learn how to update a content model in Headless CMS.
+title: Manage Content Model Settings
+description: Learn how to manage content model settings in Headless CMS.
 ---
 
 import { Alert } from "@/components/Alert";
@@ -8,16 +8,16 @@ import updateContent from "./assets/update-content-model/update-content-model.mp
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- how to update a content model
+- how to manage content model settings
 
 </Alert>
 
-In this tutorial, we will learn how to update a content model. 
-As an example, we will update the **Product** content model we created in the [Create Content Model](../essentials/create-content-model) tutorial.
+In this tutorial, we will learn how to manage a content model general settings. 
+As an example, we will update the description of **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial.
 
 <Video src={updateContent} controls={true}/>
 
-## Update Content Model
+
 1. From the **Side Menu**, Click **Headless CMS** > **Models**. 
 
    ✔️ The Content Models screen opens.
